--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,9 @@
 
     <string name="action_settings">Settings</string>
 
+    <!-- Slide menu options -->
+    <string name="menu_option_top_rated_movies">Top rated movies</string>
+    <string name="menu_option_upcomming_movies">Upcoming movies</string>
+    <string name="menu_option_now_playing_movies">Now playing movies</string>
+    <string name="menu_option_popular_movies">Popular movies</string>
 </resources>
