--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,8 +22,21 @@
     <string name="action_settings">Settings</string>
 
     <!-- Slide menu options -->
+    <string name="menu_title_movies">Movies</string>
+    <string name="menu_option_top_rated">Top rated</string>
+    <string name="menu_option_upcomming">Upcoming</string>
+    <string name="menu_option_now_playing">Now playing</string>
+    <string name="menu_option_popular">Popular</string>
     <string name="menu_option_top_rated_movies">Top rated movies</string>
     <string name="menu_option_upcomming_movies">Upcoming movies</string>
     <string name="menu_option_now_playing_movies">Now playing movies</string>
     <string name="menu_option_popular_movies">Popular movies</string>
+    <string name="menu_title_tv_shows">TV Shows</string>
+    <string name="menu_option_on_the_air">On the air</string>
+    <string name="menu_option_airing_today">Airing today</string>
+    <string name="menu_option_popular_tv_shows">Popular TV shows</string>
+    <string name="menu_option_top_rated_tv_shows">Top rated TV shows</string>
+    <string name="menu_option_on_the_air_tv_shows">On the air TV shows</string>
+    <string name="menu_option_airing_today_tv_shows">Airing today TV shows</string>
+
 </resources>
