--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,11 @@
 
     <string name="action_settings">Settings</string>
 
+    <string name="pref_sort_default" translatable="false">popularity.desc</string>
+
+    <string name="network_not_available_message">Network is not available!</string>
+    <string name="remote_service_connection_error">Cannot load data from remote service!</string>
+
     <!-- Slide menu options -->
     <string name="menu_title_movies">Movies</string>
     <string name="menu_option_top_rated">Top rated</string>
