--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,10 +32,12 @@
     <string name="menu_option_upcomming">Upcoming</string>
     <string name="menu_option_now_playing">Now playing</string>
     <string name="menu_option_popular">Popular</string>
+    <string name="menu_option_favorite">Favorite</string>
     <string name="menu_option_top_rated_movies">Top rated movies</string>
     <string name="menu_option_upcomming_movies">Upcoming movies</string>
     <string name="menu_option_now_playing_movies">Now playing movies</string>
     <string name="menu_option_popular_movies">Popular movies</string>
+    <string name="menu_option_favorite_movies">Favorite movies</string>
     <string name="menu_title_tv_shows">TV Shows</string>
     <string name="menu_option_on_the_air">On the air</string>
     <string name="menu_option_airing_today">Airing today</string>
