Add sample Details Movie activity
- Add Glide dependency
- Add sample Details Movie activity
- Display sample Details Movie activity when clicking a movie item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,12 @@
     <string name="menu_option_on_the_air_tv_shows">On the air TV shows</string>
     <string name="menu_option_airing_today_tv_shows">Airing today TV shows</string>
 
+    <!-- Details Movie -->
+    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
+    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
+    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
+    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
+    the big cheese.</string>
+
+
 </resources>
