--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,11 +59,41 @@
     <string name="favorite_movie_del_message">Remove Movie from Favorites</string>
     <string name="title_activity_settings">Settings</string>
 
-    <!-- Strings related to Settings -->
 
+    <!-- Strings related to Settings -->
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
+    <string name="pref_max_cast_list" translatable="false">pref_max_cast_list</string>
+    <string name="pref_title_max_cast_elements">Maximum cast items</string>
+    <string-array name="pref_list_max_cast_elements_titles">
+        <item>6 actors</item>
+        <item>8 actors</item>
+        <item>10 actors</item>
+        <item>all actors</item>
+    </string-array>
+    <string-array name="pref_list_max_cast_elements_values">
+        <item>6</item>
+        <item>8</item>
+        <item>10</item>
+        <item>-1</item>
+    </string-array>
+
+    <string name="pref_max_movie_list" translatable="false">pref_max_movie_list</string>
+    <string name="pref_title_max_movie_elements">Maximum movie items</string>
+    <string-array name="pref_list_max_movie_elements_titles">
+        <item>6 movies</item>
+        <item>8 movies</item>
+        <item>10 movies</item>
+        <item>all movies</item>
+    </string-array>
+    <string-array name="pref_list_max_movie_elements_values">
+        <item>6</item>
+        <item>8</item>
+        <item>10</item>
+        <item>-1</item>
+    </string-array>
+<!--
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
         based on your message history
@@ -71,20 +101,9 @@
 
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
+-->
 
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
+    <!-- Example settings for Data & Sync --><!--
     <string name="pref_header_data_sync">Data &amp; sync</string>
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
@@ -119,9 +138,9 @@
 
     <string-array name="multi_select_list_preference_default_value" />
 
-    <string name="pref_title_system_sync_settings">System sync settings</string>
+    <string name="pref_title_system_sync_settings">System sync settings</string>-->
 
-    <!-- Example settings for Notifications -->
+    <!-- Example settings for Notifications --><!--
     <string name="pref_header_notifications">Notifications</string>
 
     <string name="pref_title_new_message_notifications">New message notifications</string>
@@ -129,5 +148,5 @@
     <string name="pref_title_ringtone">Ringtone</string>
     <string name="pref_ringtone_silent">Silent</string>
 
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="pref_title_vibrate">Vibrate</string>-->
 </resources>
