--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,12 +93,12 @@
         <item>10</item>
         <item>-1</item>
     </string-array>
-<!--
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
 
+    <string name="pref_show_main_toolbar">pref_show_main_toolbar</string>
+    <string name="pref_title_show_main_toolbar">Show toolbar</string>
+    <string name="pref_description_show_main_toolbar">Display main toolbar</string>
+
+<!--
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
 -->
