--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,6 +124,7 @@
     <string name="reviews">Reviews</string>
     <string name="title_activity_tvshow">TVShowActivity</string>
     <string name="tvshow_title">TV Show title</string>
+    <string name="languages">languages</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
