--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,8 @@
     <string name="title_activity_tvshow">TVShowActivity</string>
     <string name="tvshow_title">TV Show title</string>
     <string name="languages">languages</string>
+    <string name="episodes">episodes</string>
+    <string name="seasons">seasons</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
