--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <!-- Slide menu options -->
     <string name="menu_title_movies">Movies</string>
     <string name="menu_option_movies">Movies</string>
+    <string name="menu_option_tv_shows">TV Shows</string>
     <string name="menu_option_top_rated">Top rated</string>
     <string name="menu_option_upcomming">Upcoming</string>
     <string name="menu_option_now_playing">Now playing</string>
