--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
     <!-- Slide menu options -->
     <string name="menu_title_movies">Movies</string>
     <string name="menu_option_movies">Movies</string>
+    <string name="menu_option_home">Home</string>
     <string name="menu_option_tv_shows">TV Shows</string>
     <string name="menu_option_top_rated">Top rated</string>
     <string name="menu_option_upcomming">Upcoming</string>
@@ -53,6 +54,10 @@
     <string name="title_now_playing">Now playing</string>
     <string name="title_popular">Popular</string>
     <string name="title_on_the_air">On the air</string>
+
+    <string name="more">More</string>
+    <string name="in_theaters">In Theaters</string>
+    <string name="on_tv">On TV</string>
 
     <!-- Details Movie -->
     <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
@@ -230,6 +235,9 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <!--
         <string name="pref_title_display_name">Display name</string>
