--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
 
     <string name="network_not_available_message">Network is not available!</string>
     <string name="remote_service_connection_error">Cannot load data from remote service!</string>
+    <string name="network_error">Cannot connect to the Internet.</string>
 
     <string name="error_unknown_uri">Unknown URI: </string>
     <string name="error_failed_insert_row">Failed to insert row into URI: </string>
