Add search funtionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -253,7 +253,7 @@
     <string name="movie_credits">Movie Credits</string>
     <string name="revenue">Revenue</string>
     <string name="cast">Cast</string>
-    <string name="prodution_companies">Prodution Companies</string>
+    <string name="production_companies">Production Companies</string>
     <string name="crew">Crew</string>
     <string name="trailers">Trailers</string>
     <string name="reviews">Reviews</string>
