Move settings into sliding menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -233,7 +233,7 @@
     <string name="date">date</string>
     <string name="title">Title</string>
     <string name="character">character</string>
-    <string name="share">Share</string>
+    <string name="settings">Settings</string>
     <string name="send">Send</string>
     <string name="popularity">popularity</string>
     <string name="imdb_raiting">imdb_raiting</string>
