--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
     <string name="episodes">episodes</string>
     <string name="seasons">seasons</string>
     <string name="details_budget_revenue" translatable="false">$%,d</string>
+    <string name="details_episodes">%d episodes</string>
+    <string name="details_seasons">%d seasons</string>
 
     <!-- Discover strings -->
     <string name="discover_type">Type</string>
