Do not display person titles (cast, crew) if there are no items

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -67,7 +67,7 @@
     <string name="raiting">raiting</string>
     <string name="person">persona</string>
     <string name="genre">Genero</string>
-    <string name="cast">Actores</string>
+    <string name="cast">Actuación</string>
     <string name="movie_credits">Creditos</string>
     <string name="crew">Producción</string>
     <string name="trailers">Avances</string>
