--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,12 +64,7 @@
     <string name="on_tv">On TV</string>
 
     <!-- Details Movie -->
-    <string name="details_view_no_release_date">No release date</string>
-    <string name="details_view_no_description">No description</string>
-    <string name="details_view_text_minutes">min</string>
     <string name="details_view_text_vote_average_divider" translatable="false">/10</string>
-    <string name="favorites_add_message">Add to Favorites</string>
-    <string name="favorites_del_message">Remove from Favorites</string>
     <string name="place_of_birth" translatable="false">Place of birth</string>
     <string name="birthday" translatable="false">Birthday</string>
     <string name="countries" translatable="false">Countries</string>
@@ -90,6 +85,12 @@
     <string name="languages" translatable="false">languages</string>
     <string name="details_budget_revenue" translatable="false">$%,d</string>
     <string name="details_tagline" translatable="false">\"%s\"</string>
+
+    <string name="details_view_no_release_date">No release date</string>
+    <string name="details_view_no_description">No description</string>
+    <string name="details_view_text_minutes">min</string>
+    <string name="favorites_add_message">Add to Favorites</string>
+    <string name="favorites_del_message">Remove from Favorites</string>
 
     <string name="info">Info</string>
     <string name="popularity">popularity</string>
@@ -162,7 +163,7 @@
     <string name="genre_fantasy">Fantasy</string>
     <string name="genre_history">History</string>
     <string name="genre_horror">Horror</string>
-    <string name="genre_music">Music</string>
+    <string name="genre_music">Musical</string>
     <string name="genre_mystery">Mystery</string>
     <string name="genre_romance">Romance</string>
     <string name="genre_science_fiction">Science Fiction</string>
