--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -15,13 +15,13 @@
  -->
 <resources>
     <!-- TODO: all -->
-    <string name="navigation_drawer_open">cassetto navigazione Aperto</string>
-    <string name="navigation_drawer_close">Chiudi cassetto navigazione</string>
+    <string name="navigation_drawer_open">मार्गदर्शक ड्रॉवर खोलें</string>
+    <string name="navigation_drawer_close">मार्गदर्शक ड्रॉवर बंद करें</string>
 
-    <string name="action_search">Ricerca</string>
-    <string name="action_settings">Impostazioni</string>
+    <string name="action_search">खोज</string>
+    <string name="action_settings">सेटिंग्स</string>
     <string name="feedback_message">
-        "Si prega di utilizzare inglese, francese o spagnolo per il suggerimento."
+        "आपकी प्रतिक्रिया के लिए अंग्रेजी, फ्रेंच या स्पेनिश का उपयोग करें।"
         "Hi Support Team,\n\n"
         "I found the following [PROBLEM TITLE HERE] in the Movie Guide application.\n"
         "[PROBLEM DESCRIPTION HERE]\n\n"
@@ -34,109 +34,109 @@
         "[USER NAME]"
     </string>
 
-    <string name="network_not_available_message">Rete non è disponibile!</string>
-    <string name="remote_service_connection_error">Impossibile caricare i dati dal servizio remoto!</string>
-    <string name="network_error">Non è possibile connettersi a Internet.</string>
+    <string name="network_not_available_message">नेटवर्क उपलब्ध नहीं है!</string>
+    <string name="remote_service_connection_error">दूरस्थ सेवा से डेटा लोड नहीं कर सकते!</string>
+    <string name="network_error">इंटरनेट से कनेक्ट नहीं कर सकता।</string>
 
     <!-- Slide menu options -->
-    <string name="menu_option_movies">Movies</string>
-    <string name="menu_option_discover">Discover</string>
-    <string name="menu_option_home">Home</string>
-    <string name="menu_option_tv_shows">TV Shows</string>
-    <string name="menu_option_favorites">Favorites</string>
-    <string name="menu_option_people">People</string>
-    <string name="menu_option_settings">Settings</string>
-    <string name="menu_option_feedback">Feedback</string>
+    <string name="menu_option_movies">चलचित्र</string>
+    <string name="menu_option_discover">डिस्कवर</string>
+    <string name="menu_option_home">घर</string>
+    <string name="menu_option_tv_shows">टीवी शो</string>
+    <string name="menu_option_favorites">पसंदीदा</string>
+    <string name="menu_option_people">लोग</string>
+    <string name="menu_option_settings">सेटिंग्स</string>
+    <string name="menu_option_feedback">प्रतिक्रिया</string>
 
-    <string name="title_top_rated">Top rated</string>
-    <string name="title_upcomming">Upcoming</string>
-    <string name="title_now_playing">Now playing</string>
-    <string name="title_popular">Popular</string>
-    <string name="title_on_the_air">On the air</string>
+    <string name="title_top_rated">टॉप रेटेड</string>
+    <string name="title_upcomming">आगामी</string>
+    <string name="title_now_playing">अभी खेल रहे है</string>
+    <string name="title_popular">लोकप्रिय</string>
+    <string name="title_on_the_air">हवा में</string>
 
-    <string name="more">More</string>
-    <string name="in_theaters">In Theaters</string>
-    <string name="on_tv">On TV</string>
+    <string name="more">अधिक</string>
+    <string name="in_theaters">थियेटरों में</string>
+    <string name="on_tv">टीवी पर</string>
 
-    <string name="details_view_no_release_date">No release date</string>
-    <string name="details_view_no_description">No description</string>
-    <string name="details_view_text_minutes">min</string>
-    <string name="favorites_add_message">Add to Favorites</string>
-    <string name="favorites_del_message">Remove from Favorites</string>
+    <string name="details_view_no_release_date">कोई रिलीज की तारीख</string>
+    <string name="details_view_no_description">कोई विवरण नहीं</string>
+    <string name="details_view_text_minutes">मिनट</string>
+    <string name="favorites_add_message">पसंदीदा में जोड़े</string>
+    <string name="favorites_del_message">पसंदीदा से निकालें</string>
 
-    <string name="info">Info</string>
-    <string name="popularity">popularity</string>
-    <string name="raiting">raiting</string>
-    <string name="person">person</string>
-    <string name="genre">Genre</string>
-    <string name="cast">Cast</string>
-    <string name="movie_credits">Movie Credits</string>
-    <string name="crew">Crew</string>
-    <string name="trailers">Trailers</string>
-    <string name="reviews">Reviews</string>
-    <string name="episodes">episodes</string>
-    <string name="seasons">seasons</string>
-    <string name="details_episodes">%d episodes</string>
-    <string name="details_seasons">%d seasons</string>
+    <string name="info">विवरण</string>
+    <string name="popularity">लोकप्रियता</string>
+    <string name="raiting">रेटिंग</string>
+    <string name="person">व्यक्ति</string>
+    <string name="genre">शैली</string>
+    <string name="cast">अभिनेता</string>
+    <string name="movie_credits">मूवी क्रेडिट्स</string>
+    <string name="crew">कर्मी दल</string>
+    <string name="trailers">ट्रेलर</string>
+    <string name="reviews">समीक्षा</string>
+    <string name="episodes">कड़ियां</string>
+    <string name="seasons">सत्रों</string>
+    <string name="details_episodes">%d कड़ियां</string>
+    <string name="details_seasons">%d सत्रों</string>
 
     <!-- Discover strings -->
-    <string name="discover_type">Type</string>
-    <string name="discover_genres">Genres</string>
-    <string name="discover_minimum_rating">Minimum Rating</string>
-    <string name="discover_sort">Sort By</string>
-    <string name="discover_any_genres">all</string>
-    <string name="show">Show</string>
+    <string name="discover_type">प्रकार</string>
+    <string name="discover_genres">शैलियां</string>
+    <string name="discover_minimum_rating">न्यूनतम रेटिंग</string>
+    <string name="discover_sort">इसके अनुसार क्रमबद्ध करें</string>
+    <string name="discover_any_genres">सब</string>
+    <string name="show">दिखाना</string>
 
     <!-- Sort list -->
-    <string name="title_popularity_desc">Popularity Descending</string>
-    <string name="title_popularity_asc">Popularity Ascending</string>
-    <string name="title_rating_desc">Rating Descending</string>
-    <string name="title_rating_asc">Rating Ascending</string>
-    <string name="title_release_date_desc">Release Date Descending</string>
-    <string name="title_release_date_asc">Release Date Ascending</string>
+    <string name="title_popularity_desc">लोकप्रियता अवरोही</string>
+    <string name="title_popularity_asc">लोकप्रियता आरोही</string>
+    <string name="title_rating_desc">रेटिंग अवरोही</string>
+    <string name="title_rating_asc">रेटिंग आरोही</string>
+    <string name="title_release_date_desc">रिलीज की तारीख अवरोही</string>
+    <string name="title_release_date_asc">रिलीज की तिथि आरोही</string>
 
     <!-- Genres list -->
-    <string name="genre_action">Action</string>
-    <string name="genre_adventure">Adventure</string>
-    <string name="genre_animation">Animation</string>
-    <string name="genre_comedy">Comedy</string>
-    <string name="genre_crime">Crime</string>
-    <string name="genre_documentary">Documentary</string>
-    <string name="genre_drama">Drama</string>
-    <string name="genre_family">Family</string>
-    <string name="genre_fantasy">Fantasy</string>
-    <string name="genre_history">History</string>
-    <string name="genre_horror">Horror</string>
-    <string name="genre_music">Music</string>
-    <string name="genre_mystery">Mystery</string>
-    <string name="genre_romance">Romance</string>
-    <string name="genre_science_fiction">Science Fiction</string>
-    <string name="genre_tv_movie">TV Movie</string>
-    <string name="genre_thriller">Thriller</string>
-    <string name="genre_war">War</string>
-    <string name="genre_western">Western</string>
+    <string name="genre_action">कार्य</string>
+    <string name="genre_adventure">साहसिक</string>
+    <string name="genre_animation">एनीमेशन</string>
+    <string name="genre_comedy">कॉमेडी</string>
+    <string name="genre_crime">अपराध</string>
+    <string name="genre_documentary">दस्तावेज़ी</string>
+    <string name="genre_drama">नाटक</string>
+    <string name="genre_family">परिवार</string>
+    <string name="genre_fantasy">कपोल कल्पित</string>
+    <string name="genre_history">इतिहास</string>
+    <string name="genre_horror">डरावनी</string>
+    <string name="genre_music">संगीत</string>
+    <string name="genre_mystery">रहस्य</string>
+    <string name="genre_romance">रोमांस</string>
+    <string name="genre_science_fiction">कल्पित विज्ञान</string>
+    <string name="genre_tv_movie">टीवी मूवी</string>
+    <string name="genre_thriller">थ्रिलर</string>
+    <string name="genre_war">युद्ध</string>
+    <string name="genre_western">पश्चिमी</string>
 
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">सामान्य</string>
 
-    <string name="pref_title_max_cast_elements">Maximum cast items</string>
+    <string name="pref_title_max_cast_elements">अधिकतम डाली आइटम</string>
     <string-array name="pref_list_max_cast_elements_titles">
-        <item>6 actors</item>
-        <item>8 actors</item>
-        <item>10 actors</item>
-        <item>all actors</item>
+        <item>6 अभिनेताओं</item>
+        <item>8 अभिनेताओं</item>
+        <item>10 अभिनेताओं</item>
+        <item>सभी अभिनेताओं</item>
     </string-array>
 
-    <string name="pref_title_max_movie_elements">Maximum movie items</string>
+    <string name="pref_title_max_movie_elements">अधिकतम फिल्म के आइटम</string>
     <string-array name="pref_list_max_movie_elements_titles">
-        <item>6 movies</item>
-        <item>8 movies</item>
-        <item>10 movies</item>
-        <item>all movies</item>
+        <item>6 फिल्में</item>
+        <item>8 फिल्में</item>
+        <item>10 फिल्में</item>
+        <item>सभी फिल्मों</item>
     </string-array>
 
-    <string name="pref_title_query_language">Query Language</string>
+    <string name="pref_title_query_language">पूछताछ भाषा</string>
 
 </resources>
