--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -15,13 +15,13 @@
  -->
 <resources>
     <!-- TODO: all -->
-    <string name="navigation_drawer_open">cassetto navigazione Aperto</string>
-    <string name="navigation_drawer_close">Chiudi cassetto navigazione</string>
+    <string name="navigation_drawer_open">terbuka laci navigasi</string>
+    <string name="navigation_drawer_close">dekat laci navigasi</string>
 
-    <string name="action_search">Ricerca</string>
-    <string name="action_settings">Impostazioni</string>
+    <string name="action_search">Pencarian</string>
+    <string name="action_settings">Pengaturan</string>
     <string name="feedback_message">
-        "Si prega di utilizzare inglese, francese o spagnolo per il suggerimento."
+        "Silakan gunakan bahasa Inggris, Perancis atau Spanyol untuk umpan balik Anda."
         "Hi Support Team,\n\n"
         "I found the following [PROBLEM TITLE HERE] in the Movie Guide application.\n"
         "[PROBLEM DESCRIPTION HERE]\n\n"
@@ -34,109 +34,109 @@
         "[USER NAME]"
     </string>
 
-    <string name="network_not_available_message">Rete non è disponibile!</string>
-    <string name="remote_service_connection_error">Impossibile caricare i dati dal servizio remoto!</string>
-    <string name="network_error">Non è possibile connettersi a Internet.</string>
+    <string name="network_not_available_message">Jaringan tidak tersedia!</string>
+    <string name="remote_service_connection_error">tidak dapat memuat data dari layanan remote!</string>
+    <string name="network_error">Tidak dapat terhubung ke Internet.</string>
 
     <!-- Slide menu options -->
-    <string name="menu_option_movies">Movies</string>
-    <string name="menu_option_discover">Discover</string>
-    <string name="menu_option_home">Home</string>
-    <string name="menu_option_tv_shows">TV Shows</string>
-    <string name="menu_option_favorites">Favorites</string>
-    <string name="menu_option_people">People</string>
-    <string name="menu_option_settings">Settings</string>
-    <string name="menu_option_feedback">Feedback</string>
+    <string name="menu_option_movies">Bioskop</string>
+    <string name="menu_option_discover">Menemukan</string>
+    <string name="menu_option_home">Rumah</string>
+    <string name="menu_option_tv_shows">Acara TV</string>
+    <string name="menu_option_favorites">Favorit</string>
+    <string name="menu_option_people">Orang-orang</string>
+    <string name="menu_option_settings">Pengaturan</string>
+    <string name="menu_option_feedback">Umpan balik</string>
 
-    <string name="title_top_rated">Top rated</string>
-    <string name="title_upcomming">Upcoming</string>
-    <string name="title_now_playing">Now playing</string>
-    <string name="title_popular">Popular</string>
-    <string name="title_on_the_air">On the air</string>
+    <string name="title_top_rated">Tertinggi</string>
+    <string name="title_upcomming">Mendatang</string>
+    <string name="title_now_playing">Sedang dimainkan</string>
+    <string name="title_popular">Populer</string>
+    <string name="title_on_the_air">Disiarkan</string>
 
-    <string name="more">More</string>
-    <string name="in_theaters">In Theaters</string>
-    <string name="on_tv">On TV</string>
+    <string name="more">Lebih</string>
+    <string name="in_theaters">di Bioskop</string>
+    <string name="on_tv">Di TV</string>
 
-    <string name="details_view_no_release_date">No release date</string>
-    <string name="details_view_no_description">No description</string>
-    <string name="details_view_text_minutes">min</string>
-    <string name="favorites_add_message">Add to Favorites</string>
-    <string name="favorites_del_message">Remove from Favorites</string>
+    <string name="details_view_no_release_date">Tidak ada tanggal rilis</string>
+    <string name="details_view_no_description">tidak ada deskripsi</string>
+    <string name="details_view_text_minutes">menit</string>
+    <string name="favorites_add_message">Tambahkan ke Favorit</string>
+    <string name="favorites_del_message">Hapus dari Favorit</string>
 
-    <string name="info">Info</string>
-    <string name="popularity">popularity</string>
-    <string name="raiting">raiting</string>
-    <string name="person">person</string>
-    <string name="genre">Genre</string>
-    <string name="cast">Cast</string>
-    <string name="movie_credits">Movie Credits</string>
-    <string name="crew">Crew</string>
-    <string name="trailers">Trailers</string>
-    <string name="reviews">Reviews</string>
-    <string name="episodes">episodes</string>
-    <string name="seasons">seasons</string>
-    <string name="details_episodes">%d episodes</string>
-    <string name="details_seasons">%d seasons</string>
+    <string name="info">Deskripsi</string>
+    <string name="popularity">kepopuleran</string>
+    <string name="raiting">penilaian</string>
+    <string name="person">orang</string>
+    <string name="genre">Aliran</string>
+    <string name="cast">Aktor</string>
+    <string name="movie_credits">Kredit film</string>
+    <string name="crew">Awak kapal</string>
+    <string name="trailers">Karavan</string>
+    <string name="reviews">Ulasan</string>
+    <string name="episodes">episode</string>
+    <string name="seasons">musim</string>
+    <string name="details_episodes">%d episode</string>
+    <string name="details_seasons">%d musim</string>
 
     <!-- Discover strings -->
-    <string name="discover_type">Type</string>
-    <string name="discover_genres">Genres</string>
-    <string name="discover_minimum_rating">Minimum Rating</string>
-    <string name="discover_sort">Sort By</string>
-    <string name="discover_any_genres">all</string>
-    <string name="show">Show</string>
+    <string name="discover_type">Mengetik</string>
+    <string name="discover_genres">Genre</string>
+    <string name="discover_minimum_rating">Penilaian minimum</string>
+    <string name="discover_sort">Sortir dengan</string>
+    <string name="discover_any_genres">semua</string>
+    <string name="show">Menunjukkan</string>
 
     <!-- Sort list -->
-    <string name="title_popularity_desc">Popularity Descending</string>
-    <string name="title_popularity_asc">Popularity Ascending</string>
-    <string name="title_rating_desc">Rating Descending</string>
-    <string name="title_rating_asc">Rating Ascending</string>
-    <string name="title_release_date_desc">Release Date Descending</string>
-    <string name="title_release_date_asc">Release Date Ascending</string>
+    <string name="title_popularity_desc">Descending Popularitas</string>
+    <string name="title_popularity_asc">Ascending Popularitas</string>
+    <string name="title_rating_desc">Peringkat Descending</string>
+    <string name="title_rating_asc">Peringkat Ascending</string>
+    <string name="title_release_date_desc">Tanggal Rilis Descending</string>
+    <string name="title_release_date_asc">Tanggal Rilis Ascending</string>
 
     <!-- Genres list -->
-    <string name="genre_action">Action</string>
-    <string name="genre_adventure">Adventure</string>
-    <string name="genre_animation">Animation</string>
-    <string name="genre_comedy">Comedy</string>
-    <string name="genre_crime">Crime</string>
-    <string name="genre_documentary">Documentary</string>
+    <string name="genre_action">Tindakan</string>
+    <string name="genre_adventure">Petualangan</string>
+    <string name="genre_animation">Animasi</string>
+    <string name="genre_comedy">Komedi</string>
+    <string name="genre_crime">Kejahatan</string>
+    <string name="genre_documentary">Dokumenter</string>
     <string name="genre_drama">Drama</string>
-    <string name="genre_family">Family</string>
-    <string name="genre_fantasy">Fantasy</string>
-    <string name="genre_history">History</string>
-    <string name="genre_horror">Horror</string>
-    <string name="genre_music">Music</string>
-    <string name="genre_mystery">Mystery</string>
-    <string name="genre_romance">Romance</string>
-    <string name="genre_science_fiction">Science Fiction</string>
-    <string name="genre_tv_movie">TV Movie</string>
+    <string name="genre_family">Akrab</string>
+    <string name="genre_fantasy">Fantasi</string>
+    <string name="genre_history">Sejarah</string>
+    <string name="genre_horror">Kengerian</string>
+    <string name="genre_music">Musikal</string>
+    <string name="genre_mystery">Misteri</string>
+    <string name="genre_romance">Percintaan</string>
+    <string name="genre_science_fiction">Fiksi ilmiah</string>
+    <string name="genre_tv_movie">TV Film</string>
     <string name="genre_thriller">Thriller</string>
-    <string name="genre_war">War</string>
-    <string name="genre_western">Western</string>
+    <string name="genre_war">Perang</string>
+    <string name="genre_western">Barat</string>
 
 
     <!-- Strings related to Settings -->
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_header_general">Umum</string>
 
-    <string name="pref_title_max_cast_elements">Maximum cast items</string>
+    <string name="pref_title_max_cast_elements">Item cor maksimum</string>
     <string-array name="pref_list_max_cast_elements_titles">
-        <item>6 actors</item>
-        <item>8 actors</item>
-        <item>10 actors</item>
-        <item>all actors</item>
+        <item>6 aktor</item>
+        <item>8 aktor</item>
+        <item>10 aktor</item>
+        <item>semua aktor</item>
     </string-array>
 
-    <string name="pref_title_max_movie_elements">Maximum movie items</string>
+    <string name="pref_title_max_movie_elements">Item film maksimum</string>
     <string-array name="pref_list_max_movie_elements_titles">
-        <item>6 movies</item>
-        <item>8 movies</item>
-        <item>10 movies</item>
-        <item>all movies</item>
+        <item>6 film</item>
+        <item>8 film</item>
+        <item>10 film</item>
+        <item>semua film</item>
     </string-array>
 
-    <string name="pref_title_query_language">Query Language</string>
+    <string name="pref_title_query_language">Bahasa query</string>
 
 </resources>
