Use firebase-ads library instead of play-services-ads

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
-    <string name="feedback_email" translatable="false">support.xengar@gmail.com</string>
+    <string name="feedback_email" translatable="false">apps.universum@gmail.com</string>
     <string name="feedback_message_language" translatable="false">Please use english, french or spanish for your feedback.</string>
     <string name="feedback_message">
         "Hi Support Team,\n\n"
@@ -339,7 +339,7 @@
     <string name="pref_version" translatable="false">pref_version</string>
     <string name="pref_title_version" translatable="false">Version</string>
     <string name="about_credits" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
-    <string name="copyright" translatable="false">\@2017 Angel Garcia</string>
+    <string name="copyright" translatable="false">\@2017 universum</string>
 
     <!-- -
         This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
@@ -350,6 +350,8 @@
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
     <!- -->
-    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad_unit_id_1" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad_unit_id_2" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="banner_ad_unit_id_3" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
 
 </resources>
