--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
      limitations under the License.
  -->
 <resources>
-    <string name="app_name">MovieGuide</string>
+    <string name="app_name" translatable="false">MovieGuide</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -22,7 +22,8 @@
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="feedback_email" translatable="false">apps.universum@gmail.com</string>
-    <string name="feedback_message_language" translatable="false">Please use english, french or spanish for your feedback.</string>
+    <!-- Add a legend for non-supported feedback languages
+         Please use english, french or spanish for your feedback.-->
     <string name="feedback_message">
         "Hi Support Team,\n\n"
         "I found the following [PROBLEM TITLE HERE] in the Movie Guide application.\n"
@@ -293,6 +294,7 @@
         <item name="ukrainian">Українська</item>
         <item name="turkish">Türkçe</item>
     </string-array>
+    <!--suppress CheckTagEmptyBody -->
     <string-array name="query_languages_values" translatable="false">
         <item name="default"></item>
         <item name="albanian">sq_AL</item>
@@ -344,8 +346,8 @@
     <!-- -
         This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
-    <!- -->
     <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
+    <!- -->
     <!-- -
         This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
         For more information, see https://support.google.com/admob/answer/3052638
